--- a/render/templates/about.html
+++ b/render/templates/about.html
@@ -7,7 +7,7 @@
 		 <title>Wireframe | Surge Media | Surge Media</title>
 
 		<!-- Bootstrap CSS -->
-		<link href="/skin.css" rel="stylesheet">
+		<link href="/MIT04331/render/skin.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="http://mfzy.co/isotope.pkgd.js"></script>
@@ -48,7 +48,7 @@
   </div>
 </nav>
 
-<div id="jumbotron-home" class="jumbotron img-bg"  style="background:url('https://unsplash.it/1920/600?image=743')">
+<div id="jumbotron-home" class="jumbotron img-bg"  style="background:url('https://unsplash.it/g/1920/600?image=743')">
  <div class="container">
   <h1>About us</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus harum numquam dicta ut, quisquam in, consectetur vitae tempore odio corporis labore saepe perferendis fuga neque, debitis ab voluptates minus ratione.</p>
@@ -58,10 +58,14 @@
 <section class="text-bump">
 <div id="share" class="container">
 <ul class="text-right col-lg-12">
-    <li><a href=""><i class="fa fa-twitter"></i></a></li>
-    <li><a href=""><i class="fa fa-facebook"></i></a></li>
-    <li><a href=""><i class="fa fa-get-pocket"></i></a></li>
-    <li><a href=""><i class="fa fa-share-alt"></i></a></li>
+    <li><a href=""><i class="fa fa-print"></i></a></li>
+    <li><a href=""><i class="fa fa-envelope"></i></a></li>
+<!--<li><a href=""><i class="fa fa-get-pocket"></i></a></li>
+    <li><a href=""><i class="fa fa-facebook"></i></a></li> 
+    <li><a href=""><i class="fa fa-twitter"></i></a></li> 
+    <li><a href=""><i class="fa fa-google-plus"></i></a></li> 
+
+    -->
 </ul>
 </div>
 </section>
