--- a/render/templates/contact.html
+++ b/render/templates/contact.html
@@ -7,7 +7,7 @@
 		 <title>Wireframe | Surge Media | Surge Media</title>
 
 		<!-- Bootstrap CSS -->
-		<link href="/skin.css" rel="stylesheet">
+		<link href="/MIT04331/render/skin.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="http://mfzy.co/isotope.pkgd.js"></script>
@@ -48,37 +48,70 @@
   </div>
 </nav>
 
-<div id="jumbotron-home" class="jumbotron img-bg"  style="background:url('https://unsplash.it/g/1920/600?image=743')">
+<div id="jumbotron-home" class="jumbotron img-bg"  style="background:url('https://unsplash.it/1920/600?image=343')">
  <div class="container">
-  <h1>About us</h1>
+  <h1>Contact us</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus harum numquam dicta ut, quisquam in, consectetur vitae tempore odio corporis labore saepe perferendis fuga neque, debitis ab voluptates minus ratione.</p>
   <!-- <p><a href="  " class="btn btn-primary btn-lg"></a></p> -->
   </div>
 </div>
 <section class="text-bump">
-<div id="share" class="container">
-<ul class="text-right col-lg-12">
-    <li><a href=""><i class="fa fa-print"></i></a></li>
-    <li><a href=""><i class="fa fa-envelope"></i></a></li>
-<!--<li><a href=""><i class="fa fa-get-pocket"></i></a></li>
-    <li><a href=""><i class="fa fa-facebook"></i></a></li> 
-    <li><a href=""><i class="fa fa-twitter"></i></a></li> 
-    <li><a href=""><i class="fa fa-google-plus"></i></a></li> 
-
-    -->
-</ul>
-</div>
 </section>
 <section class="">
     <div class="container">
-        <h1 class="col-lg-12 text-bump">We work with you</h1>
-        <p class="col-lg-6">
-            Treated like an animal, it took years for him to control himself. Looking for the one superhero comic you just have to read. This is where youll find all the big-time action, major storylines and iconic Spider-Man magic youd come to expect from the Wall-Crawler. Marvels mighty mutants go worldwide and beyond in this series following Cyclops, Wolverine, Beast, Emma Frost and more in their astonishing adventures.</p>
-           
- <p class="col-lg-6">
-Meet all of Spideys deadly enemies, from the Green Goblin and Doctor Octopus to Venom and Carnage, plus see Peter Parker fall in love, face tragedy and triumph, and learn that with great power comes great responsibility. Youve found it. Now, hes a premiere member of both the X-Men and the Avengers. Amazing Spider-Man is the cornerstone of the Marvel Universe.
-</p>
-
+            <form class="form-horizontal" role="form">
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputEmail3" class="control-label">Full Name</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="inputEmail3" placeholder="Enter your full name">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputEmail3" class="control-label">Service</label>
+                </div>
+                <div class="col-sm-10">
+                  <select class="form-control">
+                    <option>Option 1 </option>
+                    <option>Option 2</option>
+                    <option>Option 3</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputEmail3" class="control-label">Email</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputEmail3" class="control-label">Phone</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="inputEmail3" placeholder="Phone number">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputPassword3" class="control-label">Enquiry</label>
+                </div>
+                <div class="col-sm-10">
+                  <textarea class="form-control" style="height:250px;"></textarea>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-success pull-right">Send
+                    <i class="fa fa-fw fa-send-o"></i>
+                  </button>
+                </div>
+              </div>
+            </form>
 </div>
 </section>
 <div id="logos-wrapper" style="background:url('https://unsplash.it/1920/400?image=737')" >
@@ -96,18 +129,6 @@ Meet all of Spideys deadly enemies, from the Green Goblin and Doctor Octopus to 
   </div>
 </div>
 </div>
-<section>
- <div class="container">
-        <h1 class="col-lg-12 text-bump text-left">How we can help you</h1>
-        <p class="col-lg-6">
-            Treated like an animal, it took years for him to control himself. Looking for the one superhero comic you just have to read. This is where youll find all the big-time action, major storylines and iconic Spider-Man magic youd come to expect from the Wall-Crawler. Marvels mighty mutants go worldwide and beyond in this series following Cyclops, Wolverine, Beast, Emma Frost and more in their astonishing adventures.</p>
-           
- <p class="col-lg-6">
-Meet all of Spideys deadly enemies, from the Green Goblin and Doctor Octopus to Venom and Carnage, plus see Peter Parker fall in love, face tragedy and triumph, and learn that with great power comes great responsibility. Youve found it. Now, hes a premiere member of both the X-Men and the Avengers. Amazing Spider-Man is the cornerstone of the Marvel Universe.
-</p>
-
-</div>
-</section>
 
 <div id="footer" class="container-fluid">
   <div class="container">
