--- a/render/templates/home.html
+++ b/render/templates/home.html
@@ -7,7 +7,7 @@
 		 <title>Wireframe | Surge Media | Surge Media</title>
 
 		<!-- Bootstrap CSS -->
-		<link href="/skin.css" rel="stylesheet">
+		<link href="/MIT04331/render/skin.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="http://mfzy.co/isotope.pkgd.js"></script>
@@ -35,10 +35,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav pull-right">
             
-	<li><a href="#">About</a></li>
-	<li><a href="#">Services</a></li>
-	<li><a href="#">Resources</a></li>
-	<li><a href="#">Contact</a></li>
+ 	<li><a href="/templates/layouts/home.html">Home</a></li>
+    <li><a href="/templates/layouts/about.html">About</a></li>
+    <li><a href="/templates/layouts/services.html">Services</a></li>
+    <li><a href="/templates/layouts/resources.html">Resources</a></li>
+    <li><a href="/templates/layouts/contact.html">Contact</a></li>
 
         </li>
       </ul>
@@ -46,14 +47,77 @@
   </div>
 </nav>
 
-<div id="jumbotron-home" class="jumbotron">
+<div id="jumbotron-home" class="jumbotron  img-bg"  style="background:url('https://unsplash.it/g/1920/600?image=464')">
  <div class="container">
   <h1>Trust is built with consistency</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus harum numquam dicta ut, quisquam in, consectetur vitae tempore odio corporis labore saepe perferendis fuga neque, debitis ab voluptates minus ratione.</p>
   <p><a href="  " class="btn btn-primary btn-lg">Start with someone You Can Trust</a></p>
   </div>
 </div>
+<section id="card-area" class="bg-grey">
+    <div class="container ">
+    <h1 class="text-center text-bump">How can we help you</h1>
+        
 
+        <div class="card col-sm-12 col-xs-12 col-md-4 col-lg-4">
+        	<img class="img" src="https://unsplash.it/315/190?image=101" alt="">
+        	<header>
+        		<h2>Bussiness Accounting</h2>
+        	</header>
+        		<p>Lorem ipsum Excepteur nostrud sed dolore ut ullamco magna proident adipisicing cupidatat quis.</p>
+        <ul class="col-lg-12">
+            <li>Starting up a Bussiness</li>
+            <li>Running a Bussiness</li>
+            <li>Selling a Bussiness</li>
+        </ul>
+        
+        	<footer>
+        		<a href="">
+        			<b class="pull-left">Read more</b>
+        		</a>
+        	</footer>
+        </div>
+
+
+        <div class="card col-sm-12 col-xs-12 col-md-4 col-lg-4">
+        	<img class="img" src="https://unsplash.it/315/190?image=102" alt="">
+        	<header>
+        		<h2>Person Accounting</h2>
+        	</header>
+        		<p>Lorem ipsum Excepteur nostrud sed dolore ut ullamco magna proident adipisicing cupidatat quis.</p>
+        <ul>
+           <li>Tax Returns</li>
+           <li>investments</li>
+           <li>SMSF</li>
+        </ul>
+        
+        	<footer>
+        		<a href="">
+        			<b class="pull-left">Read more</b>
+        		</a>
+        	</footer>
+        </div>
+        <div class="card col-sm-12 col-xs-12 col-md-4 col-lg-4">
+        	<img class="img" src="https://unsplash.it/315/190?image=103" alt="">
+        	<header>
+        		<h2>Financal Planning </h2>
+        	</header>
+        		<p>Lorem ipsum Excepteur nostrud sed dolore ut ullamco magna proident adipisicing cupidatat quis.</p>
+        <ul>
+            <li>Super &amp; SMSF</li>
+            <li>Savings Plans</li>
+            <li>Insurance</li>
+       
+        </ul>
+        
+        	<footer>
+        		<a href="">
+        			<b class="pull-left">Read more</b>
+        		</a>
+        	</footer>
+        </div>
+    </div>
+</section>
 <section>
     <div class="container section-bump">
         <h1 class="col-lg-12">Mitchell And Associates Accountants</h1>
@@ -76,7 +140,65 @@
         </div>
     </div>
 </section>
-<section id="services" class="bg-grey section-bump">
+<section class="bg-grey ">
+    <div class="container">
+    <h2 class="text-bump">Contact us Today</h2>
+            <form class="form-horizontal" role="form">
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputEmail3" class="control-label">Full Name</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="inputEmail3" placeholder="Enter your full name">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputEmail3" class="control-label">Service</label>
+                </div>
+                <div class="col-sm-10">
+                  <select class="form-control">
+                    <option>Option 1 </option>
+                    <option>Option 2</option>
+                    <option>Option 3</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputEmail3" class="control-label">Email</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputEmail3" class="control-label">Phone</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="inputEmail3" placeholder="Phone number">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputPassword3" class="control-label">Enquiry</label>
+                </div>
+                <div class="col-sm-10">
+                  <textarea class="form-control" style="height:250px;"></textarea>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-success pull-right">Send
+                    <i class="fa fa-fw fa-send-o"></i>
+                  </button>
+                </div>
+              </div>
+            </form>
+</div>
+</section>
+<!-- <section id="services" class="bg-grey section-bump">
     <div class="container">
         <h1 class="col-lg-12">Services</h1>
         <div class="col-lg-6 ">
@@ -88,7 +210,7 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">Tax Stuff</h4>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic minus odio cumque debitis suscipit, alias excepturi.
+                   <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic minus odio cumque debitis suscipit, alias excepturi.</p>
                 </div>
             </div>
             <div class="media">
@@ -99,7 +221,7 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">Tax Stuff</h4>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic minus odio cumque debitis suscipit, alias excepturi.
+                   <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic minus odio cumque debitis suscipit, alias excepturi.</p>
                 </div>
             </div>
             <div class="media">
@@ -110,7 +232,7 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">Tax Stuff</h4>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic minus odio cumque debitis suscipit, alias excepturi.
+                 <p>   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic minus odio cumque debitis suscipit, alias excepturi.</p>
                 </div>
             </div>
         </div>
@@ -126,10 +248,10 @@
             </p>
         </div>
     </div>
-</section>
+</section> -->
 <section>
 </section>
-<div id="" class="container-fluid text-bump">
+<div id="footer" class="container-fluid">
   <div class="container">
     <div class="row">
       <ul>
@@ -153,7 +275,7 @@
     </div>
   </div>
 </div>
-<div id="" class="container-fluid outside-footer bg-grey ">
+<div id="small-footer" class="container-fluid outside-footer bg-grey ">
   <footer class="footer">
       <div class="container">
        
