--- a/cwd/includes/navs/navbar.html
+++ b/cwd/includes/navs/navbar.html
@@ -12,8 +12,11 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav @@navLocation">
-            @@content
-        </li>
+    <li><a href="/templates/layouts/home.html">Home</a></li>
+    <li><a href="/templates/layouts/about.html">About</a></li>
+    <li><a href="/templates/layouts/services.html">Services</a></li>
+    <li><a href="/templates/layouts/resources.html">Resources</a></li>
+    <li><a href="/templates/layouts/contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
