--- a/cwd/includes/navs/navbar.html
+++ b/cwd/includes/navs/navbar.html
@@ -1,23 +1,22 @@
 <nav id="@@id" class="navbar navbar-default @@extraClasses">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="http://bootswatch.com/default/#">@@brand</a>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="http://bootswatch.com/default/#">@@brand</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav @@navLocation">
+                <li><a href="/MIT04331/render/templates/home.html">Home</a></li>
+                <li><a href="/MIT04331/render/templates/about.html">About</a></li>
+                <li><a href="/MIT04331/render/templates/services.html">Services</a></li>
+                <li><a href="/MIT04331/render/templates/resources.html">Resources</a></li>
+                <li><a href="/MIT04331/render/templates/contact.html">Contact</a></li>
+            </ul>
+        </div>
     </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav @@navLocation">
-    <li><a href="/templates/layouts/home.html">Home</a></li>
-    <li><a href="/templates/layouts/about.html">About</a></li>
-    <li><a href="/templates/layouts/services.html">Services</a></li>
-    <li><a href="/templates/layouts/resources.html">Resources</a></li>
-    <li><a href="/templates/layouts/contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
 </nav>
