--- a/cwd/assets/sass/_homepage.scss
+++ b/cwd/assets/sass/_homepage.scss
@@ -11,7 +11,17 @@
 	h1{
 		text-transform: capitalize;
 	}
+
 }
+@media (min-width: 768px) {
+	#jumbotron-home {
+		padding-top:10vh;
+		padding-bottom:10vh;
+		padding-left:0px;
+		padding-right:0px;
+	}
+}
+
 #card-area {
 	padding:5vh;
 }
@@ -28,6 +38,9 @@
 }
 
 #share {
+	ul,li {
+		list-style:none;
+	}
 	i {
 		padding:1em;
 		min-width:1.4em;
@@ -43,7 +56,7 @@
 	// border:1px solid #efefef;
 	padding-top:2em;
 	ul,li {
-		@extend .remote-list;
+		list-style:none;
 	}
 	span {
 		font-weight:bold;
