--- a/render/templates/about.html
+++ b/render/templates/about.html
@@ -10,7 +10,6 @@
 		<link href="/MIT04331/render/skin.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="http://mfzy.co/isotope.pkgd.js"></script>
 		
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -136,6 +135,6 @@ Meet all of Spideys deadly enemies, from the Green Goblin and Doctor Octopus to 
       </div>
     </footer>
   </div>
-		<script src="/assets/js/main.js"></script>
+		<script src="/MIT04331/render/assets/js/main.js"></script>
 	</body>	
 </html>
