--- a/cwd/includes/layout/foot.html
+++ b/cwd/includes/layout/foot.html
@@ -1,3 +1,11 @@
-		<script src="/MIT04331/render/assets/js/main.js"></script>
-	</body>	
+<script src="/MIT04331/render/assets/js/main.js"></script>
+<script type='text/javascript'>
+(function (d, t) {
+var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
+bh.type = 'text/javascript';
+bh.src = '//www.bugherd.com/sidebarv2.js?apikey=7yxbwuxj56n8mqrf9oyjwg';
+s.parentNode.insertBefore(bh, s);
+})(document, 'script');
+</script>
+</body>
 </html>
