--- a/render/templates/about.html
+++ b/render/templates/about.html
@@ -33,9 +33,26 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav pull-right">
                 <li><a href="/MIT04331/render/templates/home.html">Home</a></li>
-                <li><a href="/MIT04331/render/templates/about.html">About</a></li>
-                <li><a href="/MIT04331/render/templates/services.html">Services</a></li>
-                <li><a href="/MIT04331/render/templates/resources.html">Resources</a></li>
+                <li><a href="#">About</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/MIT04331/render/templates/about.html">About M&amp;A</a></li>
+                        <li><a href="/MIT04331/render/templates/resources.html">About M&amp;A</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Services</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/MIT04331/render/templates/services.html">Non-Busniess</a></li>
+                        <li><a href="/MIT04331/render/templates/services.html">Business</a></li>
+                        <li><a href="/MIT04331/render/templates/services.html">Financial Planning</a></li>
+                    </ul>
+                </li>
+                <li><a href="/MIT04331/render/templates/resources.html">Resources</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/MIT04331/render/templates/about.html">Newsletter</a></li>
+                        <li><a href="/MIT04331/render/templates/about.html">Useful Links</a></li>
+                        <li><a href="/MIT04331/render/templates/contact.html">Forms</a></li>
+                    </ul>
+                </li>
                 <li><a href="/MIT04331/render/templates/contact.html">Contact</a></li>
             </ul>
         </div>
