jumbotrons, footer, contact parts

--- a/wp-content/themes/Basetheme/assets/styles/common/_variables.scss
+++ b/wp-content/themes/Basetheme/assets/styles/common/_variables.scss
@@ -1,5 +1,5 @@
 // Glyphicons font path
-$icon-font-path:        "../fonts/";
+$icon-font-path:        '../fonts/';
 
 // Grid settings
 $main-sm-columns:       12;
@@ -7,3 +7,9 @@ $sidebar-sm-columns:    4;
 
 // Colors
 $brand-primary:         #27ae60;
+$form-background:				#555566;
+$placeholder-color:			#505050;
+$h2-color:							#415e9e;
+$grey:									#e5e5e5;
+$text-light-color:			#f0f0f0;
+$text-dark-color:				#333333;
