--- a/wp-content/themes/Basetheme/assets/styles/main.scss
+++ b/wp-content/themes/Basetheme/assets/styles/main.scss
@@ -10,9 +10,28 @@
 @import "components/_comments";
 @import "components/_forms";
 @import "components/_grid";
+@import "components/_mitchell-fonts";
+@import "components/_navs";
 @import "components/_wp-classes";
+@import "components/_jumbotron";
 @import "layouts/_header";
 @import "layouts/_sidebar";
 @import "layouts/_footer";
 @import "layouts/_pages";
 @import "layouts/_posts";
+
+@media (max-width: $screen-xs-max) {
+	@import "layouts/_res-xs.scss";
+}
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+	@import "layouts/_res-sm.scss";
+}
+@media (min-width: $screen-md-min) {
+	@import "layouts/_res-md-lg.scss";
+}
+@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+	@import "layouts/_res-md.scss";
+}
+@media (min-width: $screen-lg-min) {
+	@import "layouts/_res-lg.scss";
+}
