--- a/wp-content/themes/Basetheme/assets/styles/common/_global.scss
+++ b/wp-content/themes/Basetheme/assets/styles/common/_global.scss
@@ -1,1 +1,20 @@
+body{
+	font-family: Gotham-Book;
+	font-weight: normal;
 
+}
+h1{
+	font-family: Gotham;
+	font-weight: 300;
+
+}
+h2{
+	font-size: 40px;
+}
+
+h3{
+	font-size: 30px;
+}
+p{
+	
+}
