--- a/wp-content/themes/Basetheme/assets/styles/components/_mitchell-fonts.scss
+++ b/wp-content/themes/Basetheme/assets/styles/components/_mitchell-fonts.scss
@@ -36,6 +36,7 @@
 .icon-basic_webpage_txt:before{content:'\004E';}
 .icon-basic_link:before{content:'\004F';}
 .icon-basic_notebook:before{content:'\0050';}
+.icon-basic_book:before{content:'\0051';}
 
 @font-face {
   font-family: 'Gotham';
