--- a/wp-content/themes/Basetheme/assets/styles/components/_services.scss
+++ b/wp-content/themes/Basetheme/assets/styles/components/_services.scss
@@ -7,6 +7,10 @@
 		opacity: .8;
 		line-height: 1.8;
 		transition: all ease 0.3s;
+		display: block;
+			 text-decoration: none;
+			 color: #333;
+		
 		ul{
 			padding-top: .7em;
 			list-style: none;
@@ -15,21 +19,30 @@
 				content: '•';
 			}
 		}
-		a{
+		.read-more{
 			width: 100%;
 	    border: 2px solid grey;
 	    height: 60px;
 	    display: inline-block;
 	    padding: .8em;
 	    color: #333;
-	    text-decoration: none;
+	   
 			
 		}
 		
 	}
 
 }
-
+.loading{
+	background-image: url("../images/dashinfinity.gif");
+	background-size: 100%;
+	width: 50px;
+	height: 50px;
+	display:none;
+	&.show{
+		display:inline-block;
+	}
+}
 .services{
 	padding-top: 3em;
 	padding-bottom: 3em;
