--- a/wp-content/themes/Basetheme/assets/styles/components/_team.scss
+++ b/wp-content/themes/Basetheme/assets/styles/components/_team.scss
@@ -72,7 +72,16 @@
 	}
 
 }
-
+.owl-item{
+	height: 555px;
+	img{
+		width: 100%;
+    height: 100%;
+    position: absolute;
+    background-size: cover;
+    background-position-x: center;
+	}
+}
 .owl-item:before{
   content: "";
   background: #fff;
