--- a/wp-content/themes/Basetheme/assets/styles/layouts/_res-xs.scss
+++ b/wp-content/themes/Basetheme/assets/styles/layouts/_res-xs.scss
@@ -10,9 +10,11 @@
 }
 .contact-icons{
 	position: absolute;
-  right: 40px;
+  right: 10px;
   top: 68px;
   width: 170px;
+  text-align: left;
+
 }
 .brand {
  
@@ -27,4 +29,47 @@
     top: 34px !important;
     width: 100% !important;
     left: -25px !important;
+}
+h1{
+  font-size:37px !important;
+}
+p{
+  font-size: 16px !important;
+}
+.info{
+  .content{
+    height: 135px;
+  }
+  a{
+    font-size: 16px;
+  }
+}
+.form-field{
+
+  div, label{
+    width: 100%;
+  }
+
+} 
+.logos{
+  padding-left: 0;
+  li{
+    margin:0 !important;
+    div{
+      img{
+        width: 17vw;
+      }
+    }
+  }
+}
+.contact{
+  div{
+    padding: 0;
+  }
+  .content{
+    padding: 0 !important;
+  }
+  .form{
+    padding: 2em 0.2em 1em .5em;
+  }
 }
