--- a/wp-content/themes/Basetheme/assets/styles/layouts/_res-xs.scss
+++ b/wp-content/themes/Basetheme/assets/styles/layouts/_res-xs.scss
@@ -73,3 +73,10 @@ p{
     padding: 2em 0.2em 1em .5em;
   }
 }
+
+/*================================
+=            Services            =
+================================*/
+.tab-content{
+padding: 3em 1em 3em 1em;
+}
