--- a/wp-content/themes/Basetheme/assets/styles/layouts/_res-xs.scss
+++ b/wp-content/themes/Basetheme/assets/styles/layouts/_res-xs.scss
@@ -16,10 +16,10 @@
   text-align: left;
 
 }
-.icon-envelope{
-  div{
+.contact-icons .icon-envelope div{
+  
     right: 4em;
-  }
+  
  } 
 .brand {
  
