--- a/wp-content/themes/Basetheme/assets/styles/layouts/_res-xs-sm.scss
+++ b/wp-content/themes/Basetheme/assets/styles/layouts/_res-xs-sm.scss
@@ -18,3 +18,29 @@
   right: 0;
   top: 18px;
 }
+
+.hero{
+	padding-top: 10em;
+	height:600px;
+	width: 100vw;
+	
+  background-size:cover;
+  background-repeat:no-repeat;
+	p{
+	  width: 80%;
+	 
+	}
+	p:last-child{
+		padding-top: 0em;
+	}
+	&.right{
+		background-position-x:80%;
+	}
+	&.left{
+		background-position-x:20%;
+	}
+	&.middle{
+		background-position-x:50%;
+	}
+}
+
